[package]
name = "pot-rpc"
version = "0.1.0"
authors = ["Alexei Barnes <alexei.barnes@aveva.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.7.0"
tokio = "1.2.0"
tonic = "0.4.0"

[build-dependencies]
tonic-build = "0.4"
