[package]
name = "pot-server"
version = "0.1.0"
authors = ["Alexei Barnes <alexei.barnes@aveva.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pot-rpc = { path = "../rpc" }
tokio = { version = "1.2.0", features = ["macros", "rt-multi-thread"] }
