[package]
name = "pot-server"
version = "0.1.0"
authors = ["Alexei Barnes <alexei.barnes@aveva.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pot-rpc = { path = "../rpc" }
tokio = { version = "1.2.0", features = ["macros", "rt-multi-thread", "sync"] }
tonic = "0.4.0"
dns-lookup = "1.0.5"
thiserror = "1.0.24"
winping = "0.10.1"
log = "0.4.14"
dashmap = "4.0.2"
